.provarCaches/00D5f000005vwGkEAI/objects/rstkf__apagingh__c.object
<CustomObject>
    <description>apagingh__c : Header table for AP Aging data for drill down enabled</description>
    <fields>
        <fullName>rstkf__apagingh_agingdate__c</fullName>
        <label>Aging Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingh_cutoffdate__c</fullName>
        <label>Cutoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingh_glcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>AP Aging Drill Down Headers</relationshipLabel>
        <relationshipName>apaginghs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingh_glusr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>rstkf__glusr__c</referenceTo>
        <relationshipLabel>AP Aging Drill Down Headers</relationshipLabel>
        <relationshipName>apaginghs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingh_numcol1head__c</fullName>
        <label>Number Column 1 Header</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingh_numcol2head__c</fullName>
        <label>Number Column 2 Header</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingh_numcol3head__c</fullName>
        <label>Number Column 3 Header</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingh_recordcount__c</fullName>
        <label>Detail Records Count</label>
        <summaryForeignKey>rstkf__apagingd__c.rstkf__apagingd_apagingh__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__apagingh_reportdate__c</fullName>
        <label>Date Printed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__apagingh_glcmp__r.rstkf__glcmp_cmpno__r.rstk__sycmp_cmpno__c &amp; &apos;_&apos; &amp; TEXT(rstkf__apagingh_agingdate__c)</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__apagingh_glcmp__r.rstkf__glcmp_cmpno__r.rstk__sycmp_cmpno__c &amp; &apos;-&apos; &amp; TEXT(rstkf__apagingh_agingdate__c)</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>AP Aging Drill Down Header</label>
    <listViews>
        <fullName>rstkf__All1</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>rstkf__apagingh_agingdate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstkf__all</fullName>
        <columns>NAME</columns>
        <columns>rstkf__apagingh_agingdate__c</columns>
        <columns>rstkf__apagingh_glcmp__c</columns>
        <columns>rstkf__apagingh_cutoffdate__c</columns>
        <columns>rstkf__apagingh_reportdate__c</columns>
        <columns>rstkf__apagingh_recordcount__c</columns>
        <columns>rstkf__apagingh_numcol1head__c</columns>
        <columns>rstkf__apagingh_numcol2head__c</columns>
        <columns>rstkf__apagingh_numcol3head__c</columns>
        <columns>rstkf__apagingh_numcol4head__c</columns>
        <columns>rstkf__apagingh_numcol5head__c</columns>
        <columns>rstkf__apagingh_numcol6head__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>rstkf__apagingh_glusr__c</columns>
        <filterScope>Everything</filterScope>
        <label>all</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AP Aging Drill Down Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>